@@ -43,7 +43,6 @@
  *         </ul>
  * </ul>
  *
- * @author Vladimir Dzhuvinov
  * @version $version$ ($version-date$)
  */
 package com.nimbusds.jose.crypto;
