@@ -55,11 +55,11 @@
 		<p>Related IETF drafts:</p>
 		
 		<ul>
-			<li>[JWA] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-algorithms-08">draft-ietf-jose-json-web-algorithms-08</a></li>
-			<li>[JWS] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-signature-08">draft-ietf-jose-json-web-signature-08</a></li>
-			<li>[JWE] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-encryption-08">draft-ietf-jose-json-web-encryption-08</a></li>
+			<li>[JWA] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-algorithms-10">draft-ietf-jose-json-web-algorithms-10</a></li>
+			<li>[JWS] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-signature-10">draft-ietf-jose-json-web-signature-10</a></li>
+			<li>[JWE] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-encryption-10">draft-ietf-jose-json-web-encryption-10</a></li>
 			<li>[JWK] <a href="http://tools.ietf.org/html/draft-ietf-jose-json-web-key-10">draft-ietf-jose-json-web-key-10</a></li>
-			<li>[JWT] <a href="http://tools.ietf.org/html/draft-ietf-oauth-json-web-token-06">draft-ietf-oauth-json-web-token-06</a></li>
+			<li>[JWT] <a href="http://tools.ietf.org/html/draft-ietf-oauth-json-web-token-07">draft-ietf-oauth-json-web-token-07</a></li>
 		</ul>
 		
 		<p>Dependencies:</p>
